--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,8 @@ jobs:
     runs-on: [ubuntu-latest]
     strategy:
       matrix:
-        compiler: [GCC, CLANG, CLANG-CL]
+        compiler: [GCC, CLANG, CLANG-CL-MSVC]
+        mbedtlsversion: ["v3.6.0", "mbedtls-3.6.1"]
     container: ghcr.io/philips-software/amp-devcontainer-cpp:5.6.0@sha256:884732270a353e8446f813e649f2918ac53ce446a6c0dd4f7f84a6d58fb26bce
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -28,3 +29,4 @@ jobs:
         with:
           configurePreset: ${{ matrix.compiler }}
           buildPreset: ${{ matrix.compiler }}
+          configurePresetAdditionalArgs: "['-DCUSTOM_MBEDTLS_VERSION=${{ matrix.mbedtlsversion }}']"
