--- a/external/mbedtls/CMakeLists.txt
+++ b/external/mbedtls/CMakeLists.txt
@@ -1,7 +1,9 @@
+message(STATUS "Fetching mbedtls ${CUSTOM_MBEDTLS_VERSION}")
+
 FetchContent_Declare(
     mbedtls
     GIT_REPOSITORY https://github.com/Mbed-TLS/mbedtls
-    GIT_TAG 869298bffeea13b205343361b7a7daf2b210e33d # v3.2.1
+    GIT_TAG ${CUSTOM_MBEDTLS_VERSION}
 )
 
 set_directory_properties(PROPERTIES EXCLUDE_FROM_ALL On)
