--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         compiler: [GCC, CLANG, CLANG-CL-MSVC]
-        mbedtlsversion: ["v3.6.0", "mbedtls-3.6.1"]
+        mbedtlsversion: ["v3.6.0", "mbedtls-3.6.1", "mbedtls-3.6.2", "mbedtls-3.6.3"]
     container: ghcr.io/philips-software/amp-devcontainer-cpp:5.6.0@sha256:884732270a353e8446f813e649f2918ac53ce446a6c0dd4f7f84a6d58fb26bce
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
